# DE2026_MLops_Final

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
airflow/: README.md
airflow/dags/: example_ml_pipeline.py
airflow/results/: .gitkeep  README.md
helm/: README.md
helm/ml-service/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
helm/ml-service/templates/: deployment.yaml  ingress.yaml  service.yaml
helm/results/: .gitkeep  README.md  helm-template.yaml
jupyterhub/: .dockerignore  Dockerfile  README.md  jupyterhub_config.py
jupyterhub/results/: .gitkeep  README.md  lakefs_example.ipynb
k8s/: README.md  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
k8s/results/: .gitkeep  README.md
lakefs/: README.md
lakefs/results/: .gitkeep  README.md  dev_branch_sample_data.csv
ml-service/: .dockerignore  Dockerfile  README.md  requirements.txt  test_api.py
ml-service/app/: main.py
ml-service/results/: .gitkeep  README.md  ml-service-logs.json  predict-response.json  root-response.json
mlflow/: Dockerfile  README.md  example_experiment.py
mlflow/artifacts/: .gitkeep
mlflow/results/: .gitkeep  README.md
monitoring/: README.md  prometheus.yml
monitoring/results/: .gitkeep  README.md  grafana-dashboard.json  ml-service-metrics.txt  prometheus-targets.json
prompt-storage/: Dockerfile  README.md  create_prompts.py
prompt-storage/data/${MLFLOW_BACKEND_STORE_URI}/0/: meta.yaml
prompt-storage/results/: .gitkeep  README.md
