[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "de2026-mlops-final"
version = "0.1.0"
description = "Final MLOps infrastructure project for DE2026 course."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==1.26.4",
  "requests==2.31.0",
  "scikit-learn==1.4.0",
  "mlflow==2.11.0",
  "boto3==1.34.44",
  "fastapi==0.109.2",
  "uvicorn[standard]==0.27.1",
  "pydantic==2.6.1",
  "sqlalchemy==2.0.27",
  "psycopg2-binary==2.9.9",
  "python-json-logger==2.0.7",
  "prometheus-client==0.20.0",
  "jupyterhub==4.0.2",
  "jupyterlab==4.0.10",
  "notebook==7.0.7",
  "lakefs-client",
]

